# HomeAssistantHaustuerPresence

./: .gitignore  README.md  hacs.json  pyproject.toml
custom_components/doorstep_presence/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  manager.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/doorstep_presence/translations/: de.json
custom_components/haustuer_presence/: __init__.py  binary_sensor.py  button.py  calibration.py  config_flow.py  const.py  manager.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/haustuer_presence/translations/: de.json  en.json
tests/: test_calibration.py
