[project]
name = "homeassistant-haustuer-presence"
version = "0.2.0"
description = "Calibrated multi-point presence classifier for Home Assistant"
requires-python = ">=3.12"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
